@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<string id="30001">Video is not available, check[CR]whether it works using web page.</string>
+	<string id="30002">Playing this video[CR]is not yet supported.</string>
+	<string id="30003">[B]Latest episodes[/B]</string>
+	<string id="30004">Choose video source</string>
+
+</strings>
